<?xml version="1.0"?>
<package>
  <name>dplr_slam2</name>
  <version>0.0.0</version>

  <description>
    This code is based on SSL_SLAM published in IEEE Robotics and Automation Letters, 2021
  </description>

  <maintainer email="srirampr@umich.edu">sriram priyadharshan</maintainer>

  <license>BSD</license>
  <url>https://github.com/srirampr22</url>
  <author email="srirampr@umich.edu">sriram priyadharshan</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>apriltag_ros</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
  </export>
</package>
